# one-box

./: package.json
.github/workflows/: main.yml  workflows.yml
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json5
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/command/: cmd.rs
src-tauri/src/errors/: custome_error.rs  mod.rs
src-tauri/src/modals/: modal.rs
src/assets/app-js/: compiler-explorer.js  png-converter.js  zlibary.js
